cmake_minimum_required(VERSION 3.21)
project(data_structure_practise)

set(CMAKE_CXX_STANDARD 17)

add_executable(data_structure_practise main.cpp myDataStructure.h myGraph.h linkGraphWithWeight.h linkGraphWithoutWeight.h Disjoint_set.h test.h binaryHeap.h LeftistHeap.h myHeap.h myTree.h AVLTree.h Stack.h myStack.h MonotonicStack.h myAlgorithm.h Sorting.h)
